--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,11 @@ default: &default
 
 development:
   <<: *default
-  database: AcademicoMagna_development
+  database: AcademicoMagna
+  host: localhost
+  port: 5432
+  username: <%= ENV["DATA_BASE_USER_NAME"] %>
+  password: <%= ENV["DATA_BASE_USER_PASSWORD"] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -55,9 +59,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: AcademicoMagna_test
+# test:
+#   <<: *default
+#   database: AcademicoMagna_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
