--- a/package.json
+++ b/package.json
@@ -4,9 +4,60 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.4",
-    "esbuild": "^0.17.5"
+    "@coreui/chartjs": "^3.0.0",
+    "@coreui/coreui-pro": "^4.3.2",
+    "@coreui/icons": "^2.1.0",
+    "@coreui/icons-react": "^2.1.0",
+    "@coreui/react-chartjs": "^2.1.0",
+    "@coreui/react-pro": "^4.4.0",
+    "@coreui/utils": "^1.3.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/react": "^5.11.1",
+    "@fullcalendar/timegrid": "^5.11.0",
+    "@rails/actioncable": "^7.0.4",
+    "@react-google-maps/api": "^2.12.1",
+    "apexcharts": "^3.36.3",
+    "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
+    "classnames": "^2.3.1",
+    "core-js": "^3.23.5",
+    "country-code-lookup": "^0.0.20",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.5",
+    "env-cmd": "^10.1.0",
+    "esbuild": "^0.16.15",
+    "esbuild-sass-plugin": "^2.4.5",
+    "eslint": "^8.31.0",
+    "jwt-decode": "^3.1.2",
+    "multiselect-react-dropdown": "^2.0.25",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-app-polyfill": "^3.0.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-country-flag": "^3.0.2",
+    "react-country-region-selector": "^3.6.1",
+    "react-csv": "^2.2.2",
+    "react-dialog-confirm": "^1.1.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
+    "react-papaparse": "^4.0.2",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-timer-hook": "^3.0.5",
+    "react-toastify": "8.0.0",
+    "redux": "4.2.0",
+    "sass": "^1.57.1",
+    "simplebar-react": "^2.4.1",
+    "sweetalert2": "^11.4.24"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+    "build": "node app/assets/config/esbuild.js",
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
