--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/turbo-rails": "^7.2.4",
     "@coreui/chartjs": "^3.0.0",
     "@coreui/coreui-pro": "^4.3.2",
     "@coreui/icons": "^2.1.0",
@@ -19,8 +17,11 @@
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/react": "^5.11.1",
     "@fullcalendar/timegrid": "^5.11.0",
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo-rails": "^7.2.4",
     "@rails/actioncable": "^7.0.4",
     "@react-google-maps/api": "^2.12.1",
+    "@wojtekmaj/react-daterange-picker": "^4.2.0",
     "apexcharts": "^3.36.3",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
