--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "esbuild-sass-plugin": "^2.4.5",
     "eslint": "^8.31.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
