fix modals in sessions

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "esbuild": "^0.16.15",
     "esbuild-sass-plugin": "^2.4.5",
     "eslint": "^8.31.0",
+    "html-react-parser": "^3.0.8",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
@@ -49,6 +50,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-papaparse": "^4.0.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-timer-hook": "^3.0.5",
