--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "esbuild": "^0.16.15",
     "esbuild-sass-plugin": "^2.4.5",
     "eslint": "^8.31.0",
+    "file-saver": "^2.0.5",
     "html-react-parser": "^3.0.8",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
