--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-sweetalert2": "^0.5.2",
     "react-timer-hook": "^3.0.5",
     "react-toastify": "8.0.0",
     "redux": "4.2.0",
