--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^6.3.0",
     "react-sweetalert2": "^0.5.2",
     "react-timer-hook": "^3.0.5",
+    "react-to-pdf": "^0.0.14",
     "react-toastify": "8.0.0",
     "redux": "4.2.0",
     "sass": "^1.57.1",
