--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dialog-confirm": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
+    "react-modal-video": "^2.0.0",
     "react-papaparse": "^4.0.2",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
